# omnivorous

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release-gates.yml
evals/: retrieval_cases.json
evals/release_corpus/: attention-transformer.md  eu-ai-procurement-clauses.md  govuk-service-standard.html  mdn-http-caching.html  rfc9110.md
scripts/: package_smoke.py  release_gates.py
src/agentmd/: __init__.py  agents.py  chunker.py  cli.py  inspector.py  models.py  output.py  packer.py  registry.py
src/agentmd/converters/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  txt.py
src/omnivorous/: __init__.py  agents.py  chunker.py  cli.py  embeddings.py  frontmatter.py  inspector.py  models.py  output.py  packer.py  pipeline.py  references.py  registry.py  relationships.py  release_checks.py  tokens.py
src/omnivorous/converters/: __init__.py  base.py  docx.py  html.py  markdown.py  pdf.py  txt.py
src/omnivorous/converters/pdf/: __init__.py  _engine.py  _marker.py  _postprocess.py  _pymupdf.py
tests/: conftest.py  test_agents.py  test_chunker.py  test_cli.py  test_embeddings.py  test_frontmatter.py  test_golden_outputs.py  test_inspector.py  test_output.py  test_packer.py  test_pipeline.py  test_references.py  test_registry.py  test_relationships.py  test_release_checks.py  test_tokens.py
tests/fixtures/: notes.txt  readme.md  web.html
tests/golden/: document.md  notes.md  readme.md  web.md
tests/test_converters/: test_docx.py  test_html.py  test_markdown.py  test_pdf.py  test_postprocess.py  test_txt.py
