[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmd"
version = "0.1.0"
description = "Convert documents into agent-ready Markdown context for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "agentmd contributors" }]
keywords = ["markdown", "ai", "agents", "documents", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<15.0",
    "pypdf>=4.0,<6.0",
    "python-docx>=1.0,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "markdownify>=0.11,<1.0",
    "tiktoken>=0.5,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.1"]

[project.scripts]
agentmd = "agentmd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
