[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivorous"
version = "0.1.0"
description = "Convert documents into agent-ready Markdown context for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "omnivorous contributors" }]
keywords = ["markdown", "ai", "agents", "documents", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0,<15.0",
    "pypdf>=4.0,<6.0",
    "pymupdf>=1.24,<2.0",
    "pymupdf4llm>=0.0.10,<1.0",
    "python-docx>=1.0,<2.0",
    "beautifulsoup4>=4.12,<5.0",
    "markdownify>=0.11,<1.0",
    "tiktoken>=0.5,<1.0",
    "pyyaml>=6.0,<7.0",
    "marker-pdf>=0.2.17",
]

[project.urls]
Homepage = "https://github.com/hugo-onnx/omnivorous"
Repository = "https://github.com/hugo-onnx/omnivorous"
Issues = "https://github.com/hugo-onnx/omnivorous/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.1"]
scientific = ["marker-pdf>=1.0,<2.0"]
semantic = ["fastembed", "onnxruntime"]

[project.scripts]
omni = "omnivorous.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/omnivorous"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/", "CLAUDE.md", "text.txt", ".claude/", ".github/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
